@@ -1,3 +1,7 @@
+2011-11-25
+* add jdeserialize to bat-extratools
+* add unpacking for Java serialized files using jdeserialize
+
 2011-11-01
 * treat Groovy files as Java
 * treat JSP files as Java
